--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,6 @@
             </span>
         </div>
 
-
         <div class="login-row">
             <span style="width: 90%">
             <input type="password" [(ngModel)]="password"
@@ -36,6 +35,8 @@
 <!--                style="min-width: 8rem"-->
 <!--                [label]="'page.cancel' | translate" icon="pi pi-times"></button>-->
 
+
+        <app-work-status-filter></app-work-status-filter>
 
         <div class="login-row">
             <button pRipple pButton type="button" (click)="cancel()"
